--- a/src/templates/usersShow.html
+++ b/src/templates/usersShow.html
@@ -3,6 +3,7 @@
 
   <h2>{{ usersShow.user.username }}</h2>
   <h4>{{ usersShow.user.email }}</h4>
+  <img ng-src="{{ usersShow.user.image }}">
 
   <button ng-if="usersShow.isLoggedIn() && usersShow.isCurrentUser()" ui-sref="usersEdit({ id: usersShow.user.id })">Edit</button>
 
