--- a/public/templates/usersIndex.html
+++ b/public/templates/usersIndex.html
@@ -2,7 +2,9 @@
   <ul class="row">
     <li ng-repeat="user in usersIndex.all" class="four columns">
       <a ui-sref="usersShow({ id: user.id })">
+
         <h2>{{ user.username }}</h2>
+        <img ng-src="{{ usersShow.user.image }}">
       </a>
     </li>
   </ul>
