--- a/src/templates/usersShow.html
+++ b/src/templates/usersShow.html
@@ -1,6 +1,7 @@
 <section>
   <h1>Users Show ONE user</h1>
 
+
   <h2>{{ usersShow.user.username }}</h2>
   <h4>{{ usersShow.user.email }}</h4>
   <img ng-src="{{ usersShow.user.image }}">
@@ -9,3 +10,6 @@
 
   <button ng-if="usersShow.isCurrentUser() && usersShow.isLoggedIn()"
   ui-sref="usersEdit({ id: usersShow.user.id })">Delete</button>
+
+  <button ng-if="usersShow.isCurrentUser() && usersShow.isLoggedIn()"
+  ui-sref="/itemsNew">Add a new Item</button>
