--- a/public/templates/itemsIndex.html
+++ b/public/templates/itemsIndex.html
@@ -2,7 +2,7 @@
   <ul class="row">
     <li ng-repeat="item in itemsIndex.all" class="four columns">
       <a ui-sref="itemsShow({ id: item.id })">
-        <h2>{{ item.image }}</h2>
+        <img ng-src="{{ itemsShow.item.image }}">
         <h2>{{ item.description }}</h2>
         <h2>{{ item.condition }}</h2>
         <h2>{{ item.size }}</h2>
