--- a/public/templates/requestsOffers.html
+++ b/public/templates/requestsOffers.html
@@ -1,9 +1,22 @@
 <h1>My Requests</h1>
 
-<h3>Requested by me</h3>
-<h3>Item I'm offering</h3>
+<ul>
+
+  <li ng-repeat="myRequest in requestsOffers.myRequests">
+    Request: {{myRequest.request.description}}<br>
+    Offer: {{myRequest.offer.description}}
+    <button ng-click="button">Cancel Request</button>
+  </li>
+
+</ul>
 
 <h1>My Offers</h1>
 
-<h3>Item being offered</h3>
-<h3>Item they're requesting</h3>
+<ul>
+  <li ng-repeat="myOffer in requestsOffers.myOffers">
+    Request: {{myOffer.request.description}}<br>
+    Offer: {{myOffer.offer.description}}
+    <button ng-click="button">Accept</button>
+    <button ng-click="button">Decline</button>
+  </li>
+</ul>
