delete request function working

--- a/public/templates/requestsOffers.html
+++ b/public/templates/requestsOffers.html
@@ -5,7 +5,7 @@
   <li ng-repeat="myRequest in requestsOffers.myRequests">
     Request: {{myRequest.request.description}}<br>
     Offer: {{myRequest.offer.description}}
-    <button ng-click="button">Cancel Request</button>
+    <button ng-click="delete()">Cancel Request</button>
   </li>
 
 </ul>
