--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,2 +1,2 @@
-.home-navbar{display:inline-block;margin:0 auto;padding:0;list-style-type:none;color:#fff;font-size:36px}body{background-color:azure}.alreadyOffered a{text-decoration:line-through;cursor:default;color:grey;opacity:.5}
+.home-navbar{display:inline-block;margin:0 auto;padding:0;list-style-type:none;color:#fff;font-size:36px}body{background-color:azure}.alreadyOffered a{text-decoration:line-through;cursor:default;color:grey;opacity:.5}.welcome{color:#a9a9a9;font-size:12px}button.accepted{color:#32cd32}button.declined{color:red}
 /*# sourceMappingURL=style.css.map */
