--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,5 +1,10 @@
 <form novalidate ng-submit="register.submit()">
   <div>
+    <label>Image</label>
+    <input type="text" placeholder="Image" ng-model="register.user.image">
+  </div>
+
+  <div>
     <label>Username</label>
     <input type="text" placeholder="Username" ng-model="register.user.username">
   </div>
@@ -9,11 +14,19 @@
   </div>
   <div>
     <label>Password</label>
-    <input type="password" placeholder="Password" ng-model="register.user.password">
+    <input type="text" placeholder="Password" ng-model="register.user.password">
   </div>
   <div>
     <label>Password Confirmation</label>
-    <input type="password" placeholder="Password Confirmation" ng-model="register.user.password_confirmation">
+    <input type="text" placeholder="Password Confirmation" ng-model="register.user.password_confirmation">
+  </div>
+  <div>
+    <label>Dress Size</label>
+    <input type="text" placeholder="Dress Size" ng-model="register.user.dress_size">
+  </div>
+  <div>
+    <label>Shoe Size</label>
+    <input type="text" placeholder="Shoe Size" ng-model="register.user.shoe_size">
   </div>
 
   <button>Register</button>
