--- a/src/templates/usersIndex.html
+++ b/src/templates/usersIndex.html
@@ -4,7 +4,7 @@
       <a ui-sref="usersShow({ id: user.id })">
 
         <h2>{{ user.username }}</h2>
-        <img ng-src="{{ usersShow.user.image }}">
+        <img ng-src="{{ user.image }}">
       </a>
     </li>
   </ul>
