--- a/src/templates/usersProfile.html
+++ b/src/templates/usersProfile.html
@@ -1,10 +1,14 @@
 <section>
   <h1>Profile Page</h1>
 
-  <img ng-src="{{ usersShow.user.image }}">
-  <h2>{{ usersShow.user.username }}</h2>
-  <h4>{{ usersShow.user.email }}</h4>
-  <h4>{{ usersShow.user.bio }}</h4>
+  <!-- show here: {{ usersProfile.user.username }} -->
+
+  <img ng-src="{{ usersProfile.user.image }}">
+  <h2>{{ user.username }}</h2>
+  <h4>{{ user.email }}</h4>
+  <h4>{{ user.bio }}</h4>
+  <h4>{{ user.dress_size }}</h4>
+  <h4>{{ user.shoe_size }}</h4>
 
 
   <button ng-if="usersShow.isLoggedIn() && usersShow.isCurrentUser()" ui-sref="usersEdit({ id: usersShow.user.id })">Edit</button>
