--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,3 +27,16 @@ button {
     color: red;
   }
 }
+.drag-drop {
+  min-height: 200px;
+  width: 200px;
+  background-color: black;
+  border-radius: 5px;
+  line-height: 0px;
+  color: white;
+  text-align: center;
+}
+img {
+  width: 200px;
+  height: 200px;
+}
