--- a/src/templates/dragDrop.html
+++ b/src/templates/dragDrop.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="dragDrop" ng-class="{ active: active }">
+  <div class="drag-drop" ng-class="{ active: active }">
     <p ng-if="!base64">{{ message }}</p>
     <img ng-src="{{ base64 }}"/>
   </div>
