--- a/src/templates/itemsNew.html
+++ b/src/templates/itemsNew.html
@@ -3,20 +3,20 @@
     <div class="twelve columns">
       <label>Image</label>
 
-          <!-- <drag-drop base64="createPost.post.base64" src="createPost.post.image"></drag-drop> -->
-
-          <drag-drop base64="itemsNew.item.base64" src="itemsNew.item.image"></drag-drop>
-
-      <input type="text" name="image" placeholder="image" ng-model="itemsNew.item.image" class="u-full-width">
+      <drag-drop base64="itemsNew.item.base64" src="itemsNew.item.image">Add New Image</drag-drop>
     </div>
+      <!-- <input type="text" name="image" placeholder="image" ng-model="itemsNew.item.image" class="u-full-width">
+    </div> -->
     <div class="twelve columns">
       <label>Description</label>
       <input type="text" name="description" placeholder="description" ng-model="itemsNew.item.description" class="u-full-width">
     </div>
+
     <div class="twelve columns">
       <label>Condition</label>
       <input type="text" name="condition" placeholder="condition" ng-model="itemsNew.item.condition" class="u-full-width">
     </div>
+
     <div class="twelve columns">
       <label>Size</label>
       <input type="text" name="size" placeholder="size" ng-model="itemsNew.item.size" class="u-full-width">
