--- a/src/templates/itemsShow.html
+++ b/src/templates/itemsShow.html
@@ -13,9 +13,9 @@
 
 </section>
 
-New Swap: {{ itemsShow.newSwap }}
+<!-- New Swap: {{ itemsShow.newSwap }}
 
-Item image: {{ itemsShow.item.image }}
+Item image: {{ itemsShow.item.image }} -->
 
 <br>
 <button ng-click="itemsShow.toggleForm()">I want this!</button>
