--- a/public/templates/usersProfile.html
+++ b/public/templates/usersProfile.html
@@ -3,7 +3,7 @@
 
   <!-- show here: {{ usersProfile.user.username }} -->
 
-  <img ng-src="{{ usersProfile.user.image }}">
+  <img class="profile" ng-src="{{ usersProfile.user.image }}">
   <h2>{{ user.username }}</h2>
   <h4>{{ user.email }}</h4>
   <h4>{{ user.bio }}</h4>
