--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,18 @@
 @import 'partials/forms';
 @import 'partials/buttons';
 @import 'partials/navs';
+@import 'partials/images';
 
 body {
-  background-color: azure;
+  background-image: url('../assets/images/backgroundone.jpg');
+  list-style-type: none;
+}
+header {
+  padding: 20px;
+}
+h6 {
+  text-align: left;
+  font-size: 14px;
 }
 
 .alreadyOffered {
@@ -14,29 +23,7 @@ body {
     opacity: 0.5;
   }
 }
-.welcome {
-  color: darkgrey;
+#itemsIndex {
   font-size: 12px;
-}
-
-button {
-  &.accepted {
-    color: limegreen;
-  }
-  &.declined {
-    color: red;
-  }
-}
-.drag-drop {
-  min-height: 200px;
-  width: 200px;
-  background-color: black;
-  border-radius: 5px;
-  line-height: 0px;
-  color: white;
-  text-align: center;
-}
-img {
-  width: 200px;
-  height: 200px;
+  list-style-type: none;
 }
