--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,3 +1,3 @@
-<section>
+<section class="home">
 <h1>Home Landing page. To contain content in the middle of the screen and navbar</h1>
 </section>
