--- a/src/scss/partials/_navs.scss
+++ b/src/scss/partials/_navs.scss
@@ -1,8 +1,22 @@
-.home-navbar {
-  display: inline-block;
+nav.u-full-width {
+  display: inline-block !important;
   margin: 0 auto;
   padding: 0;
   list-style-type: none;
-  color: white;
-  font-size: 36px;
+  text-decoration: none;
+  color: pink;
+  font-size: 12px;
+  float: top;
+  width: 100%;
+  box-sizing: border-box;
+}
+nav.u-pull-right {
+  float: right;
+}
+  li {
+  display: inline-block;
+}
+.welcome {
+  color: darkgrey;
+  font-size: 12px;
 }
