--- a/src/templates/requestsOffers.html
+++ b/src/templates/requestsOffers.html
@@ -5,7 +5,15 @@
   <div ng-repeat="item in requestsOffers.currentUser.items">
     <li ng-repeat="swap in item.offers">
       Request: {{swap.request.description}}<br>
+      Condition: {{swap.request.condition}}<br>
+      Size: {{swap.request.size}}<br>
+      <img class="item" ng-src="{{ swap.request.image.url }}"><br>
+
       Offer: {{swap.offer.description}}<br>
+      Condition: {{swap.offer.condition}}<br>
+      Size: {{swap.offer.size}}<br>
+
+
       <span ng-show="swap.accepted === null">Status: Pending</span><br>
       <span ng-show="swap.accepted === false">Status: Declined</span><br>
       <span ng-show="swap.accepted === true">Status: Accepted</span><br>
@@ -21,9 +29,9 @@
   <div ng-repeat="item in requestsOffers.currentUser.items">
     <li ng-repeat="swap in item.requests">
       Request: {{swap.request.description}}<br>
-      Offer: {{swap.offer.description}}
+      Offer: {{swap.offer.description}}<br>
       <button ng-click="requestsOffers.acceptSwap(swap)" ng-class="{'accepted': swap.accepted}">Accept</button>
-      <button ng-show="swap.accepted">Email owner</button>
+      <button ui-sref="usersShow({id: {{swap.offer.user_id}}})">Contact user</button>
       <button ng-click="requestsOffers.declineSwap(swap)" ng-class="{'declined': swap.accepted === false}">Decline</button>
     </li>
   </div>
