--- a/src/scss/partials/_images.scss
+++ b/src/scss/partials/_images.scss
@@ -1,16 +1,35 @@
-img  {
-    &.profile, &.item {
-      border: 10px black solid;
-      border-radius: 50%;
-      height: 150px;
-      width: 150px;
+.homebackground {
+  background-image: url("/assets/images/backgroundone.jpg");
+  height: 100vh;
+  width: 100vw;
+  background-repeat: no-repeat;
+  background-size: cover;
+  left: 0;
+  position: fixed;
+  z-index: -1;
+}
+img {
+  &.itemlisting, &.profileList  {
+      border-radius: 2%;
+      height: 220px;
+      width: 200px;
       overflow: hidden;
+      border: 0.5px solid lightgrey;
+      background-color: white;
+    }
+    &.icon {
+      height: auto;
+      float: left;
+      cursor: pointer;
+    }
+    &.itemShow {
+      height: 220px;
+      width: 200px;
+      overflow: hidden;
+      background-color: white;
+      border-radius: 5%;
   }
 }
-.home {
-  background-image: url("backgroundone.jpg");
-}
-
 .drag-drop {
   min-height: 200px;
   width: 200px;
