--- a/src/scss/partials/_navs.scss
+++ b/src/scss/partials/_navs.scss
@@ -1,22 +1,53 @@
-nav.u-full-width {
-  display: inline-block !important;
-  margin: 0 auto;
-  padding: 0;
-  list-style-type: none;
-  text-decoration: none;
-  color: pink;
-  font-size: 12px;
-  float: top;
+header {
+  z-index: 100;
+  background-color: darkgrey;
+  height: 69px;
+  position: fixed;
   width: 100%;
-  box-sizing: border-box;
+  top: 0;
+  nav.u-full-width {
+    margin: 0 auto;
+    float: top;
+    width: 100%;
+    // display: inline;
+    ul,li {
+      display: inline;
+      padding: 3px;
+      margin-bottom: 10px;
+      a {
+        text-decoration: none;
+        font-size: 14px;
+        font-family: 'Nunito Sans', sans-serif;
+        display: inline;
+        float: right;
+        padding: 15px;
+        color: inherit;
+      }
+    }
+    .brandbox {
+      text-align: left;
+      font-size: 20px;
+      padding-top: 15px;
+      font-weight: bold;
+      display: inline-block;
+    }
+    .brandboxWelcome {
+      margin-left: 56px;
+      margin-top: -25px;
+    }
+
+    .hello{
+      position: absolute;
+      top: 5px;
+      float: right;
+      right: 20px;
+    }
+  }
 }
-nav.u-pull-right {
-  float: right;
-}
-  li {
-  display: inline-block;
-}
-.welcome {
-  color: darkgrey;
-  font-size: 12px;
-}
+
+
+// footer {
+//   font-size: 10px;
+//   display: block;
+//   text-align: center;
+// }
