--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,26 +4,107 @@
 @import 'partials/images';
 
 body {
-  background-image: url('../assets/images/backgroundone.jpg');
-  list-style-type: none;
-}
-header {
-  padding: 20px;
-}
-h6 {
-  text-align: left;
-  font-size: 14px;
-}
-
-.alreadyOffered {
-  a {
-    text-decoration: line-through;
-    cursor: default;
-    color: grey;
-    opacity: 0.5;
+  background-color: #f6f6f6;
+  font-family: 'Nunito Sans', sans-serif;
+  h1,h2,h3,h4,h5,h6,p,a,ul,li {
+    font-family: 'Nunito Sans', sans-serif;
+    color: #302B2B;
   }
 }
-#itemsIndex {
+
+main.container {
+  padding-top: 110px;
+}
+
+img {
+  max-width: 100%;
+}
+
+h6 {
+  text-align: left;
+  font-size: 20px;
+  padding-top: 15px;
+  font-weight: bold;
+}
+h3 {
+  text-align: center;
+  font-size: 40px;
+}
+
+.itemsIndex, .usersIndex {
   font-size: 12px;
   list-style-type: none;
+  // margin-left: 10px;
+  // margin-right: 10px;
+  text-align: center;
+  margin-bottom: 20px;
+
+  // Skeleton hack for grids
+  &:nth-child(4n+1) {
+    margin-left: 0;
+    clear: left;
+  }
+}
+
+.usersIndex {
+  .itemsIndex-image {
+    background-size: cover;
+  }
+}
+
+.itemsIndex-image {
+  background-color: white;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
+  &:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+  }
+}
+
+// .items {
+//   margin-top: 20px;
+// }
+// .alreadyOffered {
+//   a {
+//     text-decoration: line-through;
+//     cursor: default;
+//     color: grey;
+//     opacity: 0.5;
+//   }
+// }
+
+
+.hometext {
+  width: 400px;
+  height: 400px;
+  margin: 0;
+  position: absolute;
+  top: 68vh;
+  left: 56%;
+  transform: translate(-50%,-50%);
+  font-size: 28px;
+}
+
+.itemsShowOne {
+  text-align: center;
+  font-size: 14px;
+}
+hr {
+  border: 0;
+  border-top: 4px double #8c8c8c;
+  text-align: center;
+}
+hr:after {
+  content: '\2665';
+  display: inline-block;
+  position: relative;
+  top: -15px;
+  padding: 0 10px;
+  background: #fff;
+  color: #8c8c8c;
+  font-size: 18px;
 }
