--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,4 +1,5 @@
 <section>
+  <center class="toppadding">
   <form novalidate ng-submit="login.submit()">
     <div>
       <label>Email</label>
@@ -11,4 +12,5 @@
 
     <button>Login</button>
   </form>
+</center>
 </section>
