--- a/src/scss/partials/_navs.scss
+++ b/src/scss/partials/_navs.scss
@@ -1,6 +1,7 @@
 header {
   z-index: 100;
-  background-color: darkgrey;
+  background-color: white;
+  border: 1px grey shadow;
   height: 69px;
   position: fixed;
   width: 100%;
