--- a/src/templates/requestsOffers.html
+++ b/src/templates/requestsOffers.html
@@ -1,4 +1,4 @@
-<h1>My Requests</h1> I am requesting these things in exchange for whatever.
+<h3>My Requests</h3> 
 
 <!-- Here: {{requestsOffers.currentUser}} -->
 <ul>
