--- a/src/templates/usersIndex.html
+++ b/src/templates/usersIndex.html
@@ -2,6 +2,8 @@
   <section>
     <div class="usersIndexContainer">
 
+      <h3>Registered Users</h3>
+
 
       <ul class="row">
         <li ng-repeat="user in usersIndex.all" class="three columns usersIndex">
