styling nearly complete. rollback to this version in case of disaster

--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -1,33 +1,32 @@
 <center class="toppadding">
   <form novalidate ng-submit="register.submit()">
     <div>
-      <label>Image</label>
-      <!-- <input type="text" placeholder="Image" ng-model="register.user.image"> -->
+      
       <drag-drop base64="register.user.base64" src="register.user.image">Add New Image</drag-drop>
     </div>
 
     <div>
-      <label>Username</label>
+      <!-- <label>Username</label> -->
       <input type="text" placeholder="Username" ng-model="register.user.username">
     </div>
     <div>
-      <label>Email</label>
+      <!-- <label>Email</label> -->
       <input type="email" placeholder="Email" ng-model="register.user.email">
     </div>
     <div>
-      <label>Password</label>
+      <!-- <label>Password</label> -->
       <input type="password" placeholder="Password" ng-model="register.user.password">
     </div>
     <div>
-      <label>Password Confirmation</label>
+      <!-- <label>Password Confirmation</label> -->
       <input type="password" placeholder="Password Confirmation" ng-model="register.user.password_confirmation">
     </div>
     <div>
-      <label>Dress Size</label>
+      <!-- <label>Dress Size</label> -->
       <input type="text" placeholder="Dress Size" ng-model="register.user.dress_size">
     </div>
     <div>
-      <label>Shoe Size</label>
+      <!-- <label>Shoe Size</label> -->
       <input type="text" placeholder="Shoe Size" ng-model="register.user.shoe_size">
     </div>
 
