--- a/public/templates/usersShow.html
+++ b/public/templates/usersShow.html
@@ -1,12 +1,13 @@
-<h1> User Profile </h1>
+<h1>{{ usersShow.user.username }}</h1>
+    <hr>
 <div class="row">
   <div class="six columns">
     <img class="userProfile-image" ng-src="{{ usersShow.user.image }}">
   </div>
   <div class="six columns">
-    <p>{{ usersShow.user.username }}</p>
-    <p>{{ usersShow.user.email }}</p>
-    <p><strong>Bio: {{ usersShow.user.bio }}</strong></p>
+    <!-- <p></p> -->
+    <p>Email: {{ usersShow.user.email }}</p>
+    <p>Bio: {{ usersShow.user.bio }}></p>
     <p>Dress Size: {{ usersShow.user.dress_size }}</p>
     <p>Shoe Size: {{ usersShow.user.shoe_size }}</p>
 
@@ -23,18 +24,18 @@
   </div>
 </div>
 <div class="row">
-    <ng-if="usersShow.isCurrentUser() && usersShow.isLoggedIn()">
-    <ul style="list-style:none">
-      <li ng-repeat="item in usersShow.user.items">
-        <div class="six columns">
-          <img class="itemsIndex-image" ng-src="{{ item.image }}">
-        </div>
-        <div class="six columns">
-          <h4>{{ item.description }}</h4>
-          <h4>{{ item.condition }}</h4>
-          <h4>{{ item.size }}</h4>
-        </div>
-      </li>
-    </ul>
-  </div>
+  <ng-if="usersShow.isCurrentUser() && usersShow.isLoggedIn()">
+  <ul style="list-style:none">
+    <li ng-repeat="item in usersShow.user.items">
+      <div class="six columns">
+        <img ng-src="{{ item.image }}">
+      </div>
+      <div class="six columns">
+        <p>{{ item.description }}</p>
+        <p>{{ item.condition }}</p>
+        <p>{{ item.size }}</p>
+      </div>
+    </li>
+  </ul>
+</div>
 </div>
