--- a/src/scss/partials/_navs.scss
+++ b/src/scss/partials/_navs.scss
@@ -14,21 +14,23 @@ header {
     ul,li {
       display: inline;
       padding: 3px;
-      margin-bottom: 10px;
+      // margin-bottom: 10px;
       a {
         text-decoration: none;
         font-size: 14px;
         font-family: 'Nunito Sans', sans-serif;
         display: inline;
         float: right;
-        padding: 15px;
+        padding: 15px 8px;
         color: inherit;
       }
     }
+  }
+}
     .brandbox {
       text-align: left;
       font-size: 20px;
-      padding-top: 15px;
+      padding-top: 12px;
       font-weight: bold;
       display: inline-block;
     }
@@ -43,8 +45,6 @@ header {
       float: right;
       right: 20px;
     }
-  }
-}
 
 
 // footer {
